--- a/index.html
+++ b/index.html
@@ -1,16 +1,40 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta name="viewport" content="width=device-width, intial-scale=1.0">
-        <title>5-Day Weather App</title>
-        <link rel="stylesheet" href="./css/style.css">
-    </head>
-    <body>
-        <div class="card">
-            <div class="search">
-                <input type="text" placeholder="enter city name" spellcheck="false">
-                <button><img src="Images/search.png"></button>
+
+<head>
+    <meta name="viewport" content="width=device-width, intial-scale=1.0">
+    <title>5-Day Weather App</title>
+    <link rel="stylesheet" href="./css/style.css">
+</head>
+
+<body>
+    <div class="card">
+        <div class="search">
+            <input type="text" placeholder="enter city name" spellcheck="false">
+            <button><img src="Images/search.png"></button>
+        </div>
+        <div class="weather">
+            <img src="Images/rain.png" class="weather-icon">
+            <h1 class="temp">22°C</h1>
+            <h2 class="city">New York</h2>
+            <div class="details">
+                <div class="col">
+                    <img src="Images/humidity.png">
+                    <div>
+                        <p class="humidity">50%</p>
+                        <p>Humidity</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <img src="Images/wind.png">
+                    <div>
+                        <p class="wind">15km/h</p>
+                        <p>Wind Speed</p>
+                    </div>
+                </div>
             </div>
         </div>
-    </body>
+    </div>
+</body>
+
 </html>
