added comments to HTML and styled the HTML sections in CSS.

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     </header>
     <!-- main section for current day info -->
     <main>
+        <!-- search section -->
         <section id="search-container">
           <aside>
             <div id="selector" class="selector-hidden"></div>
@@ -33,6 +34,7 @@
           <div id="previous-searches">  
   
           </div>
+          <!-- weather display for currrent day -->
         </section>
         <section id="weather-display">
           <div id="main-card">
