--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;0,300;0,400;0,600;1,200;1,300;1,400&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./Assets/css/style.css">
     <title> Weather Forecast App</title>
 </head>
 
@@ -106,10 +106,10 @@
       </main>
 
 
-    <script src="./js/places.js"></script>
+    <script src="./Assets/js/places.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.js"
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
-    <script src="./js/script.js"></script>
+    <script src="./Assets/js/script.js"></script>
 
 </body>
 
